# vulkan-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindJSONC.cmake  FindLevelDB.cmake  FindRocksDB.cmake  FindSodium.cmake
src/: CMakeLists.txt  argparse.c  argparse.h  block.c  block.h  blockchain.c  blockchain.h  chain.c  chain.h  chainparams.c  chainparams.h  client.c  client.h  cryptoutil.h  main.c  mempool.c  mempool.h  merkle.c  merkle.h  miner.c  miner.h  net.c  net.h  packet.c  packet.h  protocol.c  protocol.h  queue.c  queue.h  task.c  task.h  transaction.c  transaction.h  util.c  util.h  version.h  vulkan.pb-c.c  vulkan.pb-c.h  vulkan.proto  wallet.c  (+1 more)
src/common/: CMakeLists.txt  argparse.c  argparse.h  buffer.c  buffer.h  buffer_database.c  buffer_database.h  buffer_iterator.c  buffer_iterator.h  buffer_storage.c  buffer_storage.h  byteorder.h  int_util.h  logger.c  logger.h  queue.c  queue.h  task.c  task.h  tinycthread.h  util.c  util.h  vec.c  vec.h  vector.h  vulkan.h
src/core/: CMakeLists.txt  block.c  block.h  blockchain.c  blockchain.h  blockchainparams.h  checkpoint.c  checkpoint.h  checkpoint_data.h  checkpoints.c  checkpoints.h  console.c  console.h  difficulty.c  difficulty.h  genesis.c  genesis.h  mempool.c  mempool.h  merkle.c  merkle.h  net.c  net.h  p2p.c  p2p.h  parameters.c  parameters.h  pow.c  pow.h  protocol.c  protocol.h  rpc_server.c  rpc_server.h  seed_nodes.h  transaction.c  transaction.h  transaction_builder.c  transaction_builder.h  version.h  vulkan.pb-c.c  (+1 more)
src/crypto/: CMakeLists.txt  bignum_util.c  bignum_util.h  blake2b.c  blake2b.h  cryptoutil.c  cryptoutil.h  sha256d.c  sha256d.h
src/daemon/: daemon.c
src/miner/: CMakeLists.txt  miner.c  miner.h
src/wallet/: CMakeLists.txt  wallet.c  wallet.h
test/: block_test.c  blockchain_test.c  chain_test.c  main.c  mempool_test.c  merkle_test.c  transaction_test.c
tests/: CMakeLists.txt  block_tests.c  blockchain_tests.c  common_tests.c  crypto_tests.c  main.c  mempool_tests.c  merkle_tests.c  protocol_tests.c  transaction_tests.c
tests/unittests/: block_test.c  block_tests.c  blockchain_test.c  blockchain_tests.c  common_test.c  common_tests.c  crypto_tests.c  main.c  mempool_test.c  mempool_tests.c  merkle_test.c  merkle_tests.c  protocol_test.c  protocol_tests.c  transaction_test.c  transaction_tests.c
tools/: blockchain_tools.py  crypto_tools.py
